# cocapn-explain

./: AGENT.md  DEPENDENCIES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
memory/: JOURNAL.md
src/cocapn_explain/: __init__.py  counterfactual.py  decision.py  explainer.py  feature.py  oversight.py  report.py  trace.py
src/cocapn_explain.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_explain.py
