[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cocapn-explain"
version = "0.1.0"
description = "Explainability traces for agent decisions — trace format, decision trees, human-readable summaries"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Oracle1", email = "oracle1@cocapn.ai"}]
keywords = ["explainability", "agent", "cocapn", "xai", "trace"]

[project.urls]
Homepage = "https://github.com/cocapn/plato-provenance"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
